--- a/public/pago.html
+++ b/public/pago.html
@@ -251,7 +251,7 @@
   <header class="header">
     <div class="container header-container">
       <div class="logo">
-        <a href="index.html"><img src="https://via.placeholder.com/180x60?text=MiTienda503" alt="MiTienda503"></a>
+        <a href="index.html"><img src="/assets/imagenes/logo.png" alt="MiTienda503"></a>
       </div>
       <div class="cart-icon">
         <i class="fas fa-shopping-cart"></i>
