--- a/public/pago.html
+++ b/public/pago.html
@@ -4,12 +4,61 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Pago - MiTienda</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="/assets/css/styles.css">
-  <!-- SDK Firebase -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-functions-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Estilos -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
+  <style>
+    .paypal-button-container {
+      margin: 20px 0;
+    }
+    #alternativePayment {
+      display: none;
+      background: #0070ba;
+      color: white;
+      border: none;
+      padding: 12px 24px;
+      border-radius: 4px;
+      cursor: pointer;
+      font-size: 16px;
+      width: 100%;
+    }
+    .feedback-overlay {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
+    }
+    .feedback-overlay.active {
+      display: flex;
+    }
+    .feedback-content {
+      background: white;
+      padding: 30px;
+      border-radius: 8px;
+      text-align: center;
+      max-width: 400px;
+    }
+    .success {
+      color: #28a745;
+    }
+    .error {
+      color: #dc3545;
+    }
+    .info {
+      color: #17a2b8;
+    }
+  </style>
 </head>
 <body>
   <!-- Header -->
@@ -94,7 +143,7 @@
           <div class="form-group">
             <h3>Método de Pago</h3>
             <div id="paypal-button-container"></div>
-            <button type="button" id="alternativePayment" class="submit-payment" style="display: none;">
+            <button type="button" id="alternativePayment" class="submit-payment">
               <i class="fas fa-lock"></i> Confirmar Pago $<span id="paymentTotal">0.00</span>
             </button>
           </div>
@@ -116,6 +165,27 @@
   </div>
 
   <!-- Scripts -->
-  <script src="js/pago.js"></script>
+  <script type="module">
+    // Configuración de Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyCR-axayENUg4FFb4jj0uVW2BnfwQ5EiXY",
+      authDomain: "mitienda-c2609.firebaseapp.com",
+      projectId: "mitienda-c2609",
+      storageBucket: "mitienda-c2609.appspot.com",
+      messagingSenderId: "536746062790",
+      appId: "1:536746062790:web:6e545efbc8f037e36538c7"
+    };
+
+    // Inicializar Firebase
+    firebase.initializeApp(firebaseConfig);
+    
+    // Importar el módulo de pago
+    import { initializePayment } from '/js/pago.js';
+    
+    // Inicializar el sistema de pago
+    document.addEventListener('DOMContentLoaded', () => {
+      initializePayment();
+    });
+  </script>
 </body>
 </html>
