--- a/public/pago.html
+++ b/public/pago.html
@@ -6,7 +6,7 @@
   <title>Pago - MiTienda</title>
   
   <!-- Firebase SDK (versión modular) -->
-  <script type="module" src="/src/shared/firebase-config.js"></script>
+  <script type="module" src="/js/firebase-client.js"></script>
   
   <!-- PayPal SDK (se carga dinámicamente desde pago.js) -->
   
