--- a/public/pago.html
+++ b/public/pago.html
@@ -190,7 +190,7 @@
 
   <!-- Scripts -->
   <script type="module">
-    import { initPayment } from '/src/paypal/checkout.js';
+  <script type="module" src="/js/pago.js"></script>
     
     // Inicializar el sistema de pago
     document.addEventListener('DOMContentLoaded', () => {
