--- a/public/pago.html
+++ b/public/pago.html
@@ -276,12 +276,9 @@ function renderCartItems() {
   let html = '';
 
   checkoutData.items.forEach(item => {
-    const imagePath = item.image ? item.image : 'assets/default-product.png';
-    const imageUrl = imagePath.startsWith('http') ? imagePath : `/${imagePath}`;
-    
     html += `
       <div class="order-item">
-        <img src="${imageUrl}" alt="${item.name}" width="50" onerror="this.src='/assets/default-product.png'">
+        <img src="${item.image || 'assets/default-product.png'}" alt="${item.name}" width="50">
         <div class="item-details">
           <span class="item-name">${item.name}</span>
           <span class="item-price">${item.quantity} × $${item.price.toFixed(2)}</span>
@@ -334,9 +331,8 @@ document.addEventListener('DOMContentLoaded', async () => {
   renderCartItems();
   updateTotals();
 
-  // Carga el SDK de PayPal desde tu backend para mayor seguridad
   const script = document.createElement('script');
-  script.src = `${API_BASE}/get-paypal-sdk`; // Endpoint que devuelve el script del SDK con tu client ID
+  script.src = 'https://www.paypal.com/sdk/js?client-id=SB&currency=USD';
   script.onload = () => setupPayPalButton();
   script.onerror = () => {
     console.error("Error cargando PayPal SDK");
