--- a/public/pago.html
+++ b/public/pago.html
@@ -1,348 +1,96 @@
-// ==================== CONFIGURACIÓN INICIAL ====================
-import { initializeApp } from "firebase/app";
-import { getFirestore, doc, setDoc, serverTimestamp } from "firebase/firestore";
-import { getAuth } from "firebase/auth";
-
-const firebaseConfig = {
-  apiKey: "AIzaSyCR-axayENUg4FFb4jj0uVW2BnfwQ5EiXY",
-  authDomain: "mitienda-c2609.firebaseapp.com",
-  databaseURL: "https://mitienda-c2609-default-rtdb.firebaseio.com",
-  projectId: "mitienda-c2609",
-  storageBucket: "mitienda-c2609.firebasestorage.app",
-  messagingSenderId: "536746062790",
-  appId: "1:536746062790:web:6e545efbc8f037e36538c7"
-};
-
-const app = initializeApp(firebaseConfig);
-const db = getFirestore(app);
-const auth = getAuth(app);
-
-// ==================== ESTRUCTURA DE CHECKOUT ====================
-const checkoutStructure = {
-  items: [],
-  total: 0,
-  subtotal: 0,
-  tax: 0,
-  shipping: 0,
-  isGuest: false,
-  timestamp: null
-};
-
-let checkoutData = null;
-
-// ==================== DATOS GEOGRÁFICOS ====================
-const municipiosPorDepartamento = {
-  'Ahuachapán': ['Ahuachapán', 'Apaneca', 'Atiquizaya', 'Concepción de Ataco', 'El Refugio', 
-    'Guaymango', 'Jujutla', 'San Francisco Menéndez', 'San Lorenzo', 'San Pedro Puxtla',
-    'Tacuba', 'Turín'],
-  'Santa Ana': ['Santa Ana', 'Candelaria de la Frontera', 'Chalchuapa', 'Coatepeque', 'El Congo',
-    'El Porvenir', 'Masahuat', 'Metapán', 'San Antonio Pajonal', 'San Sebastián Salitrillo',
-    'Santiago de la Frontera', 'Texistepeque'],
-  'Sonsonate': ['Sonsonate', 'Acajutla', 'Armenia', 'Caluco', 'Cuisnahuat', 'Izalco',
-    'Juayúa', 'Nahuizalco', 'Nahulingo', 'Salcoatitán', 'San Antonio del Monte',
-    'San Julián', 'Santa Catarina Masahuat', 'Santa Isabel Ishuatán', 'Santo Domingo de Guzmán',
-    'Sonzacate'],
-  // ... (resto de departamentos sin cambios)
-};
-
-// ==================== FUNCIONES PAYPAL CON BACKEND ====================
-const API_BASE = "https://api-id2wh2idaa-uc.a.run.app";
-
-async function createPayPalOrder() {
-  try {
-    const response = await fetch(`${API_BASE}/create-paypal-order`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({
-        amount: checkoutData.total,
-        items: checkoutData.items.map(item => ({
-          id: item.id,
-          name: item.name,
-          price: item.price,
-          quantity: item.quantity
-        })),
-        customer: {
-          email: document.getElementById('customerEmail').value,
-          name: document.getElementById('customerName').value
-        },
-        shipping: {
-          address: document.getElementById('shippingAddress').value,
-          department: document.getElementById('departamento').value,
-          municipality: document.getElementById('municipio').value
-        }
-      })
-    });
-    return await response.json();
-  } catch (error) {
-    console.error("Error creando orden PayPal:", error);
-    throw error;
-  }
-}
-
-async function capturePayPalOrder(orderID) {
-  try {
-    const response = await fetch(`${API_BASE}/capture-paypal-order`, {
-      method: 'POST',
-      headers: { 'Content-Type': 'application/json' },
-      body: JSON.stringify({ orderID })
-    });
-    return await response.json();
-  } catch (error) {
-    console.error("Error capturando orden PayPal:", error);
-    throw error;
-  }
-}
-
-// ==================== FUNCIONES DE FIRESTORE ====================
-async function saveTransaction(paymentDetails, orderId) {
-  try {
-    const user = auth.currentUser;
-
-    await setDoc(doc(db, "transactions", orderId), {
-      orderId,
-      amount: checkoutData.total,
-      subtotal: checkoutData.subtotal,
-      tax: checkoutData.tax,
-      shipping: checkoutData.shipping,
-      items: checkoutData.items,
-      customer: {
-        userId: user?.uid || "guest",
-        email: document.getElementById('customerEmail').value,
-        name: document.getElementById('customerName').value,
-        phone: document.getElementById('customerPhone').value
-      },
-      shipping: {
-        address: document.getElementById('shippingAddress').value,
-        department: document.getElementById('departamento').value,
-        municipality: document.getElementById('municipio').value
-      },
-      paymentMethod: 'paypal',
-      status: paymentDetails.status,
-      paypalData: paymentDetails,
-      timestamp: serverTimestamp(),
-      isGuest: checkoutData.isGuest
-    });
-  } catch (error) {
-    console.error("Error guardando transacción:", error);
-    throw error;
-  }
-}
-
-// ==================== INTEGRACIÓN PAYPAL BUTTON ====================
-function setupPayPalButton() {
-  if (!window.paypal) {
-    console.error("PayPal SDK no cargado");
-    return;
-  }
-
-  window.paypal.Buttons({
-    style: {
-      layout: 'vertical',
-      color: 'blue',
-      shape: 'rect',
-      label: 'paypal',
-      height: 40
-    },
-    createOrder: async function () {
-      if (!validateForm()) {
-        throw new Error('Complete todos los campos requeridos');
-      }
-      try {
-        const order = await createPayPalOrder();
-        return order.id;
-      } catch (error) {
-        showFeedback('Error', 'No se pudo iniciar el pago', 'error');
-        throw error;
-      }
-    },
-    onApprove: async function (data) {
-      try {
-        const details = await capturePayPalOrder(data.orderID);
-        await saveTransaction(details, data.orderID);
-
-        showFeedback('¡Pago completado!', `Orden #${data.orderID} procesada`, 'success');
-        localStorage.removeItem('currentCheckout');
-
-        setTimeout(() => {
-          window.location.href = 'confirmacion.html';
-        }, 3000);
-      } catch (error) {
-        console.error("Error en el pago:", error);
-        showFeedback('Error', 'Error al procesar el pago', 'error');
-      }
-    },
-    onError: function (err) {
-      console.error("Error en PayPal:", err);
-      showFeedback('Error', 'Error al procesar pago con PayPal', 'error');
-      document.getElementById('alternativePayment').style.display = 'block';
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Proceso de Pago</title>
+  <!-- Font Awesome para íconos -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Estilos CSS -->
+  <style>
+    .error { color: red; }
+    .feedback-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: 1000;
+      align-items: center;
+      justify-content: center;
     }
-  }).render('#paypal-button-container');
-}
+    .feedback-modal.active { display: flex; }
+    #feedbackIcon { font-size: 3rem; margin-bottom: 1rem; }
+  </style>
+</head>
+<body>
+  <h1>Finalizar Compra</h1>
 
-// ==================== MÉTODO ALTERNATIVO ====================
-function setupAlternativePayment() {
-  const altBtn = document.getElementById('alternativePayment');
-
-  altBtn.addEventListener('click', async function () {
-    if (!validateForm()) {
-      showFeedback('Error', 'Complete todos los campos', 'error');
-      return;
-    }
-
-    try {
-      const orderId = 'ALT-' + Math.random().toString(36).substring(2, 10).toUpperCase();
-
-      await saveTransaction({
-        status: 'completed',
-        id: orderId,
-        payer: {
-          name: { given_name: document.getElementById('customerName').value },
-          email_address: document.getElementById('customerEmail').value
-        }
-      }, orderId);
-
-      showFeedback('¡Pago exitoso!', `Orden #${orderId} procesada`, 'success');
-      localStorage.removeItem('currentCheckout');
-
-      setTimeout(() => {
-        window.location.href = 'confirmacion.html';
-      }, 3000);
-    } catch (error) {
-      console.error("Error en pago alternativo:", error);
-      showFeedback('Error', 'Error al procesar pago alternativo', 'error');
-    }
-  });
-}
-
-// ==================== FUNCIONES AUXILIARES ====================
-function validateForm() {
-  const requiredFields = [
-    'customerName', 'customerEmail', 'customerPhone',
-    'shippingAddress', 'departamento', 'municipio'
-  ];
-
-  let isValid = true;
-
-  requiredFields.forEach(fieldId => {
-    const field = document.getElementById(fieldId);
-    if (!field.value.trim()) {
-      isValid = false;
-      field.style.borderColor = '#ff0000';
-    } else {
-      field.style.borderColor = '';
-    }
-  });
-
-  return isValid;
-}
-
-function showFeedback(title, message, type = 'success') {
-  const modal = document.getElementById('feedbackModal');
-  const icon = document.getElementById('feedbackIcon');
-
-  icon.innerHTML = `<i class="fas fa-${type === 'success' ? 'check-circle' : 'times-circle'} ${type}"></i>`;
-  document.getElementById('feedbackTitle').textContent = title;
-  document.getElementById('feedbackMessage').textContent = message;
-  modal.classList.add('active');
-}
-
-function setupAddressForm() {
-  const deptoSelect = document.getElementById('departamento');
-  const muniSelect = document.getElementById('municipio');
-
-  deptoSelect.innerHTML = '<option value="">Seleccione departamento...</option>';
-  Object.keys(municipiosPorDepartamento).forEach(depto => {
-    deptoSelect.innerHTML += `<option value="${depto}">${depto}</option>`;
-  });
-
-  deptoSelect.addEventListener('change', function () {
-    updateMunicipios(this.value);
-  });
-}
-
-function updateMunicipios(departamento) {
-  const muniSelect = document.getElementById('municipio');
-  muniSelect.innerHTML = '<option value="">Seleccione municipio...</option>';
-
-  if (departamento && municipiosPorDepartamento[departamento]) {
-    municipiosPorDepartamento[departamento].forEach(municipio => {
-      muniSelect.innerHTML += `<option value="${municipio}">${municipio}</option>`;
-    });
-  }
-}
-
-function renderCartItems() {
-  const container = document.getElementById('orderItems');
-  let html = '';
-
-  checkoutData.items.forEach(item => {
-    html += `
-      <div class="order-item">
-        <img src="${item.image || 'assets/default-product.png'}" alt="${item.name}" width="50">
-        <div class="item-details">
-          <span class="item-name">${item.name}</span>
-          <span class="item-price">${item.quantity} × $${item.price.toFixed(2)}</span>
-          <span class="item-total">$${(item.price * item.quantity).toFixed(2)}</span>
-        </div>
-      </div>
-    `;
-  });
-
-  html += `
-    <div class="order-summary">
-      <div class="summary-row">
-        <span>Subtotal:</span>
-        <span>$${checkoutData.subtotal.toFixed(2)}</span>
-      </div>
-      <div class="summary-row">
-        <span>Impuestos (${(checkoutData.tax / checkoutData.subtotal * 100).toFixed(0)}%):</span>
-        <span>$${checkoutData.tax.toFixed(2)}</span>
-      </div>
-      <div class="summary-row">
-        <span>Envío:</span>
-        <span>$${checkoutData.shipping.toFixed(2)}</span>
-      </div>
-      <div class="summary-row total">
-        <span>Total:</span>
-        <span>$${checkoutData.total.toFixed(2)}</span>
-      </div>
+  <!-- Sección de Datos del Cliente -->
+  <form id="checkoutForm">
+    <div>
+      <label for="customerName">Nombre completo:</label>
+      <input type="text" id="customerName" required>
     </div>
-  `;
+    <div>
+      <label for="customerEmail">Email:</label>
+      <input type="email" id="customerEmail" required>
+    </div>
+    <div>
+      <label for="customerPhone">Teléfono:</label>
+      <input type="tel" id="customerPhone" required>
+    </div>
 
-  container.innerHTML = html || '<p>No hay productos en el carrito</p>';
-}
+    <!-- Dirección de Envío -->
+    <div>
+      <label for="departamento">Departamento:</label>
+      <select id="departamento" required>
+        <option value="">Seleccione...</option>
+      </select>
+    </div>
+    <div>
+      <label for="municipio">Municipio:</label>
+      <select id="municipio" required>
+        <option value="">Seleccione...</option>
+      </select>
+    </div>
+    <div>
+      <label for="shippingAddress">Dirección exacta:</label>
+      <textarea id="shippingAddress" required></textarea>
+    </div>
+  </form>
 
-function updateTotals() {
-  document.getElementById('orderTotal').textContent = checkoutData.total.toFixed(2);
-  document.getElementById('paymentTotal').textContent = checkoutData.total.toFixed(2);
-}
+  <!-- Resumen del Pedido -->
+  <div id="orderItems">
+    <!-- Aquí se renderizarán los productos dinámicamente -->
+  </div>
 
-// ==================== INICIALIZACIÓN ====================
-document.addEventListener('DOMContentLoaded', async () => {
-  checkoutData = JSON.parse(localStorage.getItem('currentCheckout')) || { ...checkoutStructure };
+  <!-- Botón de PayPal -->
+  <div id="paypal-button-container"></div>
 
-  if (!checkoutData.items || checkoutData.items.length === 0) {
-    showFeedback('Error', 'No hay productos en el carrito', 'error');
-    setTimeout(() => window.location.href = 'productos.html', 2000);
-    return;
-  }
+  <!-- Método Alternativo (oculto inicialmente) -->
+  <button id="alternativePayment" style="display: none;">
+    Pagar con Método Alternativo
+  </button>
 
-  setupAddressForm();
-  renderCartItems();
-  updateTotals();
+  <!-- Modal de Feedback -->
+  <div id="feedbackModal" class="feedback-modal">
+    <div class="feedback-content">
+      <div id="feedbackIcon"></div>
+      <h2 id="feedbackTitle"></h2>
+      <p id="feedbackMessage"></p>
+      <button id="feedbackClose">Cerrar</button>
+    </div>
+  </div>
 
-  const script = document.createElement('script');
-  script.src = 'https://www.paypal.com/sdk/js?client-id=SB&currency=USD';
-  script.onload = () => setupPayPalButton();
-  script.onerror = () => {
-    console.error("Error cargando PayPal SDK");
-    document.getElementById('alternativePayment').style.display = 'block';
-  };
-  document.head.appendChild(script);
-
-  setupAlternativePayment();
-
-  document.getElementById('feedbackClose').addEventListener('click', () => {
-    document.getElementById('feedbackModal').classList.remove('active');
-  });
-});
+  <!-- Firebase y PayPal SDK -->
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-auth-compat.js"></script>
+  
+  <!-- Script local -->
+  <script type="module" src="pago.js"></script>
+</body>
+</html>
