--- a/public/pago.html
+++ b/public/pago.html
@@ -85,6 +85,19 @@
             <p id="emptyCartMessage" class="text-center text-gray-600 text-lg hidden">Tu carrito está vacío.</p>
         </div>
 
+        <!-- Nuevo cuadro para la política de envío -->
+        <div class="bg-blue-100 border-l-4 border-blue-500 text-blue-700 p-4 mb-8 rounded-lg shadow-md" role="alert">
+            <div class="flex items-center">
+                <svg class="w-6 h-6 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-7-4a1 1 0 11-2 0 1 1 0 012 0zM9 9a1 1 0 000 2v3a1 1 0 001 1h1a1 1 0 100-2v-3a1 1 0 00-1-1H9z" clip-rule="evenodd"></path>
+                </svg>
+                <p class="font-bold text-lg">Política de Envío</p>
+            </div>
+            <p class="mt-2 text-base">
+                Tu pedido será entregado en un plazo de <strong class="font-semibold">3 a 4 días hábiles</strong> una vez que el pago haya sido confirmado.
+            </p>
+        </div>
+
         <!-- Contenedor principal para el formulario de envío y los botones de pago -->
         <div class="flex flex-col lg:flex-row gap-8">
             <!-- Formulario de Detalles de Envío/Facturación -->
